--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,1 +1,10 @@
-<p>{{ message }}</p>
+<h1>Simple Service Demo</h1>
+    
+<!-- Display items -->
+<ul>
+    <li *ngFor="let item of items">{{ item }}</li>
+</ul>
+
+<!-- Add new item -->
+<input [(ngModel)]="newItem" placeholder="Enter a new item" />
+<button (click)="onAddItem()">Add Item</button>
